syntax = "proto3";

package dev.abstractmachines.wittgenstein;

service FactDB {
  rpc StateFact (StateFactRequest) returns (StateFactReply) {}
  rpc StateFacts (stream StateFactRequest) returns (StreamedStateFactReply) {}
  rpc LookupEntity (LookupEntityRequest) returns (LookupEntityReply) {}
}

message StateFactRequest {
  string entity_uri = 2;
  string source_uri = 3;
  string field_uri = 4;
  string value = 5;
}

message StreamedStateFactReply {
  int32 fact_count = 1;
}

message StateFactReply {
  oneof response {
    string fact_uri = 1;
    string error = 2;
  }
}

message LookupEntityRequest {
}

message LookupEntityReply {
}
